--- a/blog.html
+++ b/blog.html
@@ -73,7 +73,7 @@ width:100%; height:100%; object-fit: fill; ">  </a>
    <p class="blog">Recently I watched the new Josh Safdie film “Marty Supreme”, I found myself to be head over heels about it. The film was so good that it gave my end of year film list a new order, putting it comfortably in the first place position. This is no joke, 2025 was a fantastic year for films and I adored sinners, superman and the chainsaw man film heavily, but Marty Supreme rose to the top for many personal reasons. I was super excited going into this movie, and avoided all spoilers and reviews, when I left the theatre this week I saw that the movie was rather controversial with some critics. Usually I can see the points of criticism, but however this marty supreme criticism baffles me, because it lacks film comprehension and misses the entire point of the movie.
 </p>
        
-     <center> <input onclick="change#33()" value="Show More" ID="button#33" type="submit" class="collapse#" style="cursor: url(custompointer.png), auto; position:relative; top:50%; margin: 0 auto; display:inline-block; width:30vw;height:30px;color:white; background-color:black;"/>
+     <center> <input onclick="change#33()" value="Show More" ID="button#33" type="submit" class="collapse#33" style="cursor: url(custompointer.png), auto; position:relative; top:50%; margin: 0 auto; display:inline-block; width:30vw;height:30px;color:white; background-color:black;"/>
    
  
 <div class="container"
